--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### You can do a lot more than just print hello world\n",
+    "### You can do a lot more than just print \"hello world\"\n",
     "\n",
     "This is a fully functioning Python3 interpreter so you can write functions and objects like in the next box.\n",
     "\n",
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89\n"
+      "10946\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
     "    else:\n",
     "        return fib(n-1) + fib(n-2)\n",
     "\n",
-    "print(fib(10))"
+    "print(fib(20))"
    ]
   },
   {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +316,89 @@
     "b_rev = b[::-1]\n",
     "# convert to hex (hexlify)\n",
     "h_rev = hexlify(b_rev)\n",
-    "\n",
     "print(h_rev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modular Arithmetic\n",
+    "\n",
+    "If you don't remember Modular Arithmetic, it's this function on python\n",
+    "\n",
+    "```python\n",
+    "39 % 12\n",
+    "```\n",
+    "\n",
+    "The result is 3 because that is the remainder after division (39 / 12 == 3 + 3/12).\n",
+    "\n",
+    "Some people like to call it \"wrap-around\" math. If it helps, think of modular arithmetic like a clock:\n",
+    "\n",
+    "![clock](http://latex.artofproblemsolving.com/f/4/d/f4daa2601de14fddf3d8441e16cc322a25e85354.png)\n",
+    "\n",
+    "Think of taking the modulo as asking the question \"what hour will it be 39 hours from now?\"\n",
+    "\n",
+    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "39 % 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "Find the modulo 19 of these numbers:\n",
+    "\n",
+    "* 99\n",
+    "* 456 * 444\n",
+    "* 9 ^ 77\n",
+    "\n",
+    "(note python uses ** to do exponentiation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "prime = 19\n",
+    "print(99 % prime)\n",
+    "print(456*444 % prime)\n",
+    "print(9**77 % prime)"
    ]
   }
  ],
