--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -42,20 +42,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1\n",
-    "\n",
-    "from binascii import unhexlify\n",
+    "# WIF Example\n",
     "from helper import encode_base58_checksum\n",
     "\n",
-    "# 2^256-2^199, mainnet, compressed\n",
-    "# 2^256-2^201, testnet, uncompressed\n",
-    "# 0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, mainnet, uncompressed\n",
-    "# 1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, testnet, compressed\n",
+    "secret = 2**256 - 2**200\n",
+    "s = secret.to_bytes(32, 'big')\n",
+    "print(encode_base58_checksum(b'\\x80'+s))\n",
+    "print(encode_base58_checksum(b'\\x80'+s+b'\\x01'))\n",
+    "print(encode_base58_checksum(b'\\xef'+s))\n",
+    "print(encode_base58_checksum(b'\\xef'+s+b'\\x01'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1.1\n",
+    "from helper import encode_base58_checksum\n",
     "\n",
-    "# get the private key in 32-byte big-endian: num.to_bytes(32, 'big') or unhexlify(hex_num)\n",
-    "# prepend b'\\x80' for mainnet, b'\\xef' for testnet\n",
-    "# append b'\\x01' for compressed\n",
-    "# base58 the whole thing with checksum"
+    "components = (\n",
+    "    # (secret, testnet, compressed)\n",
+    "    (2**256-2**199, False, True),\n",
+    "    (2**256-2**201, True, False),\n",
+    "    (0x0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, False, False),\n",
+    "    (0x1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, True, True),\n",
+    ")\n",
+    "\n",
+    "# iterate through components\n",
+    "    # get the private key in 32-byte big-endian: num.to_bytes(32, 'big')\n",
+    "    # prepend b'\\x80' for mainnet, b'\\xef' for testnet\n",
+    "    # append b'\\x01' for compressed\n",
+    "    # base58 the whole thing with checksum"
    ]
   },
   {
@@ -68,6 +87,24 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.PrivateKeyTest('test_wif'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Big/Little Endian Example\n",
+    "from binascii import hexlify, unhexlify\n",
+    "\n",
+    "h = 1234567890\n",
+    "big_endian_h = h.to_bytes(4, 'big') \n",
+    "little_endian_h = h.to_bytes(4, 'little')\n",
+    "print(hexlify(big_endian_h))\n",
+    "print(hexlify(little_endian_h))\n",
+    "s = int.from_bytes(unhexlify('17e8fa'), 'little')\n",
+    "print(s)"
    ]
   },
   {
@@ -108,12 +145,13 @@
     "\n",
     "from binascii import hexlify, unhexlify\n",
     "\n",
-    "# 03ee4f7a4e68f802303bc659f8f817964b4b74fe046facc3ae1be4679d622c45\n",
-    "# 813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1\n",
+    "hexes = ('03ee4f7a4e68f802303bc659f8f817964b4b74fe046facc3ae1be4679d622c45',\n",
+    "         '813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1')\n",
     "\n",
-    "# turn into binary with unhexlify\n",
-    "# reverse using [::-1]\n",
-    "# turn back to hex with hexlify"
+    "# iterate over hexes\n",
+    "    # turn into binary with unhexlify\n",
+    "    # reverse using [::-1]\n",
+    "    # turn back to hex with hexlify"
    ]
   },
   {
@@ -126,11 +164,14 @@
     "\n",
     "from binascii import unhexlify\n",
     "\n",
-    "# 99c3980000000000\n",
-    "# a135ef0100000000\n",
+    "hexes =(\n",
+    "    '99c3980000000000',\n",
+    "    'a135ef0100000000',\n",
+    ")\n",
     "\n",
-    "# turn into binary with unhexlify\n",
-    "# use int.from_bytes(byte_representation, 'little')"
+    "# iterate over hexes\n",
+    "    # turn into binary with unhexlify\n",
+    "    # use int.from_bytes(byte_representation, 'little')"
    ]
   },
   {
@@ -275,7 +316,9 @@
     "# unhexlify to get the binary representation\n",
     "# create a stream using BytesIO()\n",
     "# parse from tx\n",
-    "# print tx"
+    "# print tx's second input's scriptSig hexlified\n",
+    "# print tx's first output's scriptPubKey hexlified\n",
+    "# print tx's first output's amount"
    ]
   }
  ],
