--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -40,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -76,7 +76,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -112,11 +112,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15hZo812Lx266Dot6T52krxpnhrNiaqHya\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'15hZo812Lx266Dot6T52krxpnhrNiaqHya'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -129,13 +132,13 @@
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
     "# unhexlify to get binary\n",
-    "raw_script_pubkey = unhexlify(hex_script_pubkey)\n",
+    "script_pubkey = unhexlify(hex_script_pubkey)\n",
     "# parse with Script\n",
-    "script_pubkey = Script.parse(raw_script_pubkey)\n",
+    "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
-    "h160 = script_pubkey.elements[2]\n",
+    "h160 = s.elements[2]\n",
     "# convert h160 to p2pkh address\n",
-    "print(h160_to_p2pkh_address(h160))"
+    "h160_to_p2pkh_address(h160)"
    ]
   },
   {
@@ -149,7 +152,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -173,7 +176,7 @@
     "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
     "```\n",
     "\n",
-    "#### 4.2. Make these tests pass.\n",
+    "#### 4.2. Make [these tests](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_parse\n",
     "block.py:BlockTest:test_serialize\n",
@@ -205,9 +208,9 @@
     "# unhexlify to get the binary\n",
     "bin_block = unhexlify(hex_block)\n",
     "# double_sha256 the result\n",
-    "proof = double_sha256(bin_block)\n",
+    "result = double_sha256(bin_block)\n",
     "# hexlify to see what it looks like\n",
-    "print(hexlify(proof))"
+    "print(hexlify(result))"
    ]
   },
   {
@@ -223,17 +226,17 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -249,25 +252,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 5\n",
-    "\n",
-    "#### 5.1. What is this block signaling for?\n",
-    "```\n",
-    "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
-    "```\n",
-    "\n",
-    "#### 5.2. Make [these tests](/edit/session6/block.py) pass.\n",
-    "```\n",
-    "block.py:BlockTest:test_bip9\n",
-    "block.py:BlockTest:test_bip91\n",
-    "block.py:BlockTest:test_bip141\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -276,14 +260,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
-      "True\n"
+      "BIP9: True\n",
+      "BIP91: False\n",
+      "BIP141: True\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 5.1\n",
+    "# Version Signaling Example\n",
     "\n",
     "from binascii import unhexlify\n",
     "from io import BytesIO\n",
@@ -299,12 +283,26 @@
     "b = Block.parse(stream)\n",
     "# get the version\n",
     "version = b.version\n",
-    "# rightshift 29 and see if it's equal to 0b001 for BIP9\n",
-    "print(version >> 29 == 0b001)\n",
-    "# see if bit 4 from the right is set for BIP1\n",
-    "print(version >> 4 & 1 == 1)\n",
-    "# see if bit 1 from the right is set for BIP141\n",
-    "print(version >> 1 & 1 == 1)"
+    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
+    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 5\n",
+    "\n",
+    "#### 5.1. Make [these tests](/edit/session6/block.py) pass.\n",
+    "```\n",
+    "block.py:BlockTest:test_bip9\n",
+    "block.py:BlockTest:test_bip91\n",
+    "block.py:BlockTest:test_bip141\n",
+    "```"
    ]
   },
   {
@@ -318,24 +316,24 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.009s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 5.2\n",
+    "# Exercise 5.1\n",
     "\n",
     "reload(block)\n",
     "run_test(block.BlockTest('test_bip9'))\n",
@@ -357,6 +355,8 @@
     }
    ],
    "source": [
+    "# Calculating Target from Bits Example\n",
+    "\n",
     "from binascii import unhexlify\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
@@ -380,6 +380,8 @@
     }
    ],
    "source": [
+    "# Calculating Difficulty from Target Example\n",
+    "\n",
     "from binascii import unhexlify\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
@@ -423,7 +425,7 @@
      "output_type": "stream",
      "text": [
       "000000000000000x1788f2000000000000000000000000000000000000000000\n",
-      "46717549644\n"
+      "46717549644.70642\n"
      ]
     }
    ],
@@ -435,25 +437,25 @@
     "hex_bits = 'f2881718'\n",
     "\n",
     "# unhexlify to get the bits\n",
-    "# reverse to get the right order\n",
-    "bin_bits = unhexlify(hex_bits)[::-1]\n",
-    "# first byte is exponent\n",
-    "exponent = bin_bits[0]\n",
-    "# next three bytes are the coefficient. use: int.from_bytes(x, 'big')\n",
-    "coefficient = int.from_bytes(bin_bits[1:], 'big')\n",
+    "bits = unhexlify(hex_bits)\n",
+    "# last byte is exponent\n",
+    "exponent = bits[-1]\n",
+    "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
+    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
     "target = coefficient * 2**(8*(exponent-3))\n",
+    "# print target using print('0x{:x}'.format(target).zfill(64))\n",
+    "print('0x{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
-    "\n",
     "# do the same for the min_bits for min target\n",
-    "min_bits = unhexlify(hex_min_bits)[::-1]\n",
-    "min_exponent = min_bits[0]\n",
-    "min_coefficient = int.from_bytes(min_bits[1:], 'big')\n",
+    "min_bits = unhexlify(hex_min_bits)\n",
+    "min_exponent = min_bits[-1]\n",
+    "min_coefficient = int.from_bytes(min_bits[:-1], 'little')\n",
     "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
+    "\n",
     "# difficulty is min target / target\n",
-    "difficulty = min_target // target\n",
-    "print('0x{:x}'.format(target).zfill(64))\n",
+    "difficulty = min_target / target\n",
     "print(difficulty)"
    ]
   },
@@ -468,7 +470,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -504,11 +506,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -524,17 +529,17 @@
     "# unhexlify to get the binary block\n",
     "bin_block = unhexlify(hex_block)\n",
     "# double_sha256 the block\n",
-    "s256 = double_sha256(bin_block)\n",
+    "sha = double_sha256(bin_block)\n",
     "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
-    "proof_of_work = int.from_bytes(s256, 'little')\n",
-    "# make a stream\n",
+    "proof = int.from_bytes(sha, 'little')\n",
+    "# make a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
     "b = Block.parse(stream)\n",
     "# get the target\n",
     "target = b.target()\n",
     "# check proof of work < target\n",
-    "print(proof_of_work < target)"
+    "proof < target"
    ]
   },
   {
