--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -125,7 +125,7 @@
     "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
     "```\n",
     "\n",
-    "#### 4.2. Make these tests pass.\n",
+    "#### 4.2. Make [these tests](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_parse\n",
     "block.py:BlockTest:test_serialize\n",
@@ -168,17 +168,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Version Signaling Example\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "from io import BytesIO\n",
+    "from block import Block\n",
+    "\n",
+    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
+    "\n",
+    "# unhexlify to get the binary block\n",
+    "bin_block = unhexlify(hex_block)\n",
+    "# create a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
+    "# parse the block\n",
+    "b = Block.parse(stream)\n",
+    "# get the version\n",
+    "version = b.version\n",
+    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
+    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
     "\n",
-    "#### 5.1. What is this block signaling for?\n",
-    "```\n",
-    "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
-    "```\n",
-    "\n",
-    "#### 5.2. Make [these tests](/edit/session6/block.py) pass.\n",
+    "#### 5.1. Make [these tests](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_bip9\n",
     "block.py:BlockTest:test_bip91\n",
@@ -194,29 +219,6 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "from binascii import unhexlify\n",
-    "from io import BytesIO\n",
-    "from block import Block\n",
-    "\n",
-    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
-    "\n",
-    "# unhexlify to get the binary block\n",
-    "# create a stream using BytesIO\n",
-    "# parse the block\n",
-    "# get the version\n",
-    "# rightshift 29 and see if it's equal to 0b001 for BIP9\n",
-    "# see if bit 4 from the right is set for BIP1\n",
-    "# see if bit 1 from the right is set for BIP141"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 5.2\n",
-    "\n",
     "reload(block)\n",
     "run_test(block.BlockTest('test_bip9'))\n",
     "run_test(block.BlockTest('test_bip91'))\n",
@@ -229,6 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculating Target from Bits Example\n",
+    "\n",
     "from binascii import unhexlify\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
@@ -244,6 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculating Difficulty from Target Example\n",
+    "\n",
     "from binascii import unhexlify\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
@@ -290,14 +296,14 @@
     "hex_bits = 'f2881718'\n",
     "\n",
     "# unhexlify to get the bits\n",
-    "# reverse to get the right order\n",
-    "# first byte is exponent\n",
-    "# next three bytes are the coefficient. use: int.from_bytes(x, 'big')\n",
+    "# last byte is exponent\n",
+    "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "# print target using print('0x{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
-    "\n",
     "# do the same for the min_bits for min target\n",
+    "\n",
     "# difficulty is min target / target"
    ]
   },
@@ -348,7 +354,7 @@
     "# unhexlify to get the binary block\n",
     "# double_sha256 the block\n",
     "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
-    "# make a stream\n",
+    "# make a stream using BytesIO\n",
     "# parse the Block\n",
     "# get the target\n",
     "# check proof of work < target"
