--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -19,6 +19,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merkle Parent Example\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "from helper import double_sha256\n",
+    "\n",
+    "tx_hash0 = unhexlify('c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5')\n",
+    "tx_hash1 = unhexlify('c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5')\n",
+    "\n",
+    "merkle_parent = double_sha256(tx_hash0+tx_hash1)\n",
+    "hexlify(merkle_parent)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,6 +86,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merkle Parent Level Example\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "from helper import double_sha256, flip_endian, merkle_parent\n",
+    "hex_hashes = [\n",
+    "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
+    "    'c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5',\n",
+    "    'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0',\n",
+    "    '3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181',\n",
+    "    '10092f2633be5f3ce349bf9ddbde36caa3dd10dfa0ec8106bce23acbff637dae',\n",
+    "    'b13a750047bc0bdceb2473e5fe488c2596d7a7124b4e716fdd29b046ef99bbf0',\n",
+    "]\n",
+    "hashes = [unhexlify(x) for x in hex_hashes]\n",
+    "parent_level = []\n",
+    "for i in range(0, len(hex_hashes), 2):\n",
+    "    parent_level.append(merkle_parent(hashes[i], hashes[i+1]))\n",
+    "print([hexlify(x) for x in parent_level])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,8 +155,9 @@
     "# unhexlify to get all the hashes in binary\n",
     "# initialize parent level\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
-    "# add a merkle_parent of i and i+1 hashes to parent level\n",
-    "# show the hexlified hashes"
+    "    # calculate merkle_parent of i and i+1 hashes\n",
+    "    # print the hexlified hash\n",
+    "    # add parent to parent level"
    ]
   },
   {
@@ -126,6 +170,32 @@
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent_level0'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Odd Merkle Parent Level Example\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "from helper import double_sha256, flip_endian, merkle_parent\n",
+    "hex_hashes = [\n",
+    "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
+    "    'c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5',\n",
+    "    'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0',\n",
+    "    '3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181',\n",
+    "    '10092f2633be5f3ce349bf9ddbde36caa3dd10dfa0ec8106bce23acbff637dae',\n",
+    "]\n",
+    "hashes = [unhexlify(x) for x in hex_hashes]\n",
+    "if len(hashes) % 2 == 1:\n",
+    "    hashes.append(hashes[-1])\n",
+    "parent_level = []\n",
+    "for i in range(0, len(hex_hashes), 2):\n",
+    "    parent_level.append(merkle_parent(hashes[i], hashes[i+1]))\n",
+    "print([hexlify(x) for x in parent_level])"
    ]
   },
   {
@@ -172,8 +242,9 @@
     "# if the number of hashes is odd, duplicate the last one\n",
     "# initialize parent level\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
-    "# add a merkle_parent of i and i+1 hashes to parent level\n",
-    "# show the hexlified hashes"
+    "    # calculate merkle_parent of i and i+1 hashes\n",
+    "    # print the hexlified hash\n",
+    "    # add parent to parent level"
    ]
   },
   {
@@ -194,6 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merkle Root Example\n",
+    "\n",
     "from binascii import hexlify, unhexlify\n",
     "from helper import double_sha256, merkle_parent_level\n",
     "\n",
@@ -270,9 +343,10 @@
     "]\n",
     "\n",
     "# unhexlify to get all the hashes in binary\n",
+    "# initialize current level to be the hashes\n",
     "# loop until current_level has only 1 element\n",
-    "# make the current level the parent level\n",
-    "# show the root"
+    "    # make the current level the parent level\n",
+    "# print the hexlified root"
    ]
   },
   {
@@ -285,6 +359,29 @@
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_root'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block Merkle Root Example\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "from helper import double_sha256, merkle_parent_level, merkle_root\n",
+    "tx_hex_hashes = [\n",
+    "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
+    "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
+    "    '959428d7c48113cb9149d0566bde3d46e98cf028053c522b8fa8f735241aa953',\n",
+    "    'a9f27b99d5d108dede755710d4a1ffa2c74af70b4ca71726fa57d68454e609a2',\n",
+    "    '62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577',\n",
+    "    '766900590ece194667e9da2984018057512887110bf54fe0aa800157aec796ba',\n",
+    "    'e8270fb475763bc8d855cfe45ed98060988c1bdcad2ffc8364f783c98999a208',\n",
+    "]\n",
+    "current_level = [unhexlify(x)[::-1] for x in tx_hex_hashes]\n",
+    "print(hexlify(merkle_root(current_level)[::-1]).decode('ascii'))"
    ]
   },
   {
@@ -348,9 +445,9 @@
     "    '3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d',\n",
     "]\n",
     "\n",
-    "# unhexlify after flipping endianness to get all the hashes in binary\n",
+    "# unhexlify and reverse ([::-1]) to get all the hashes in binary\n",
     "# get the merkle root\n",
-    "# flip endian on the hexlified root"
+    "# hexlify the reversed root"
    ]
   },
   {
@@ -364,6 +461,25 @@
     "reload(block)\n",
     "run_test(block.BlockTest('test_validate_merkle_root'))\n",
     "run_test(block.BlockTest('test_calculate_merkle_tree'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merkle Path Example\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "total_levels = math.ceil(math.log(16, 2))\n",
+    "merkle_path = []\n",
+    "index = 10\n",
+    "for i in range(total_levels):\n",
+    "    merkle_path.append(index)\n",
+    "    index = index // 2\n",
+    "print(merkle_path)"
    ]
   },
   {
@@ -396,9 +512,9 @@
     "# get the total number of levels possible (math.ceil(math.log(num_items, 2)))\n",
     "# initialize merkle path array\n",
     "# loop through number of levels\n",
-    "# add the index\n",
-    "# index integer div by 2 to get the index at the next level\n",
-    "# print the path"
+    "    # add the index to merkle path\n",
+    "    # index integer div by 2 to get the index at the next level\n",
+    "# print merkle path"
    ]
   },
   {
@@ -411,6 +527,59 @@
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_path'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merkle Proof Example\n",
+    "from binascii import unhexlify\n",
+    "\n",
+    "from block import Block\n",
+    "from helper import int_to_little_endian, merkle_path\n",
+    "\n",
+    "hex_tx_hashes = [\n",
+    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
+    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
+    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
+    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
+    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
+    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
+    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
+    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
+    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
+    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
+    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
+    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
+    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
+    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
+    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
+    "    \"f9dbfafc3af3400954975da24eb325e326960a25b87fffe23eef3e7ed2fb610e\",\n",
+    "    \"8e694f5092f6a644ab587ca445f9e949e4f5991d3c3c72bd4574a7c9896a2402\",\n",
+    "    \"9cc887977168f430f4f896dfc6fc7379834733ce938abe7cd8a1a668d1ea1841\",\n",
+    "]\n",
+    "b = Block(\n",
+    "    version=536870914,\n",
+    "    prev_block=unhexlify('00000000000002dda81fd83ac5b944ad88592a213bfaf54bffad68725c782639'),\n",
+    "    merkle_root=unhexlify('f2710c8f3652ec6bfe79769458ae4be8117cad46964ce9dab9ce570bcb2ff9b0'),\n",
+    "    bits=int_to_little_endian(437256176, 4),\n",
+    "    nonce=b'\\x00\\x00\\x00\\x00',\n",
+    "    timestamp=1512503014,\n",
+    "    tx_hashes=[unhexlify(h) for h in hex_tx_hashes],\n",
+    ")\n",
+    "b.calculate_merkle_tree()\n",
+    "index, num_items = 10, 18\n",
+    "merkle_proof = []\n",
+    "for level, index_at_level in enumerate(merkle_path(index, num_items)):\n",
+    "    if index_at_level % 2 == 1:\n",
+    "        partner = index_at_level - 1\n",
+    "    else:\n",
+    "        partner = index_at_level + 1\n",
+    "    merkle_proof.append(b.merkle_tree[level][partner])\n",
+    "print(index, merkle_proof)"
    ]
   },
   {
@@ -483,14 +652,13 @@
     "b.tx_hashes = [unhexlify(x) for x in tx_hex_hashes]\n",
     "\n",
     "# calculate the merkle tree first\n",
-    "# get the index of the tx_hash in the lowest level of the merkle tree (level 0)\n",
-    "# remember the tx hash needs to be reversed!\n",
+    "# get the index of the tx_hash in the list of tx_hashes (b.tx_hashes.index(tx_hash))\n",
     "# initialize the proof hashes\n",
-    "# loop through the merkle path\n",
-    "# if the current level index is even, the partner is + 1\n",
-    "# if the current level index is odd, the partner is - 1\n",
-    "# add the partner to proof hashes\n",
-    "# initialize proof"
+    "# loop through the enumerated merkle path (keep track of level and index at level)\n",
+    "# for level, index_at_level in enumerate(merkle_path(index, len(b.tx_hashes))):\n",
+    "    # if the current level index is odd, the partner is - 1\n",
+    "    # if the current level index is even, the partner is + 1\n",
+    "    # add the partner to proof hashes"
    ]
   },
   {
@@ -551,7 +719,7 @@
     "\n",
     "from binascii import hexlify, unhexlify\n",
     "from block import Proof\n",
-    "from helper import double_sha256, flip_endian, merkle_root\n",
+    "from helper import double_sha256, flip_endian, merkle_root, merkle_path, merkle_parent\n",
     "\n",
     "tx_hash = unhexlify('e8270fb475763bc8d855cfe45ed98060988c1bdcad2ffc8364f783c98999a208')\n",
     "merkle_root = unhexlify('4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301')\n",
@@ -562,12 +730,14 @@
     "    '524c93c6dd0874c5fd9e4e57cfe83176e3c2841c973afb4043d225c22cc52983',\n",
     "]\n",
     "proof_hashes = [unhexlify(x) for x in proof_hex_hashes]\n",
+    "index = 6\n",
     "\n",
     "# get the current hash (reverse it as it needs to be little endian)\n",
     "# get the merkle path for the index. assume the num items is 2**len(proof_hashes)\n",
     "# loop through proof hashes\n",
-    "# if even, proof_hash is on the right\n",
-    "# if odd, proof_hash is on the left\n",
+    "# for proof_hash, index_at_level in zip(proof_hashes, path):\n",
+    "    # if index_at_level is odd, proof_hash is on the left\n",
+    "    # if index_at_level is even, proof_hash is on the right\n",
     "# see if the current one reversed is the same as merkle root"
    ]
   },
@@ -666,6 +836,8 @@
    "metadata": {},
    "source": [
     "### Exercise 11\n",
+    "\n",
+    "Use https://bitnodes.earn.com/nodes/ to find nodes to connect to.\n",
     "\n",
     "#### 11.1. Run the code below and parse some messages"
    ]
