--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### You can do a lot more than just print hello world\n",
+    "### You can do a lot more than just print \"hello world\"\n",
     "\n",
     "This is a fully functioning Python3 interpreter so you can write functions and objects like in the next box.\n",
     "\n",
@@ -246,6 +246,64 @@
     "# convert to binary (unhexlify)\n",
     "# reverse ([::-1])\n",
     "# convert to hex (hexlify)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modular Arithmetic\n",
+    "\n",
+    "If you don't remember Modular Arithmetic, it's this function on python\n",
+    "\n",
+    "```python\n",
+    "39 % 12\n",
+    "```\n",
+    "\n",
+    "The result is 3 because that is the remainder after division (39 / 12 == 3 + 3/12).\n",
+    "\n",
+    "Some people like to call it \"wrap-around\" math. If it helps, think of modular arithmetic like a clock:\n",
+    "\n",
+    "![clock](http://latex.artofproblemsolving.com/f/4/d/f4daa2601de14fddf3d8441e16cc322a25e85354.png)\n",
+    "\n",
+    "Think of taking the modulo as asking the question \"what hour will it be 39 hours from now?\"\n",
+    "\n",
+    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "39 % 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "Find the modulo 19 of these numbers:\n",
+    "\n",
+    "* 99\n",
+    "* 456 * 444\n",
+    "* 9 ^ 77\n",
+    "\n",
+    "(note python uses ** to do exponentiation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "prime = 19"
    ]
   }
  ],
