--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -57,10 +57,16 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "print((2 + 15) % 31)\n",
-    "print((17 + 21) % 31)\n",
-    "print((29 - 4) % 31)\n",
-    "print((15 - 30) % 31)"
+    "# remember that % is the modulo operator\n",
+    "prime = 31\n",
+    "# 2+15=?\n",
+    "print((2+15) % prime)\n",
+    "# 17+21=?\n",
+    "print((17+21) % prime)\n",
+    "# 29-4=?\n",
+    "print((29-4) % prime)\n",
+    "# 15-30=?\n",
+    "print((15-30) % prime)"
    ]
   },
   {
@@ -74,12 +80,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.021s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.011s\n",
       "\n",
       "OK\n"
      ]
@@ -136,9 +142,14 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "print((24 * 19) % 31)\n",
-    "print((17**3) % 31)\n",
-    "print((5**5 * 18) % 31)"
+    "# remember that ** is the exponentiation operator\n",
+    "prime = 31\n",
+    "# 24*19=?\n",
+    "print(24*19 % prime)\n",
+    "# 17^3=?\n",
+    "print(17**3 % prime)\n",
+    "# 5^5*18=?\n",
+    "print(5**5*18 % prime)"
    ]
   },
   {
@@ -150,15 +161,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+      "[0, 26, 52, 78, 104, 130, 156, 182, 208, 234, 260, 286, 312, 338, 364, 390, 416, 442, 468, 494, 520, 546, 572, 598, 624, 650, 676, 702, 728, 754, 780]\n"
      ]
     }
    ],
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "k = 8\n",
-    "print(sorted([k*i % 31 for i in range(31)]))"
+    "from random import randint\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
+    "prime = 31\n",
+    "k = randint(1,31)\n",
+    "print(sorted([i*k for i in range(31)]))"
    ]
   },
   {
@@ -170,14 +185,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "print([i**30 % 31 for i in range(31)])"
+    "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive\n",
+    "prime = 31\n",
+    "print([i**30 % prime for i in range(1, 31)])"
    ]
   },
   {
@@ -191,12 +208,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -251,9 +268,14 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "print((3 * 24**29) % 31)\n",
-    "print(((17**29)**3) % 31)\n",
-    "print(((4**29)**4 * 11) % 31)"
+    "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
+    "prime = 31\n",
+    "# 3/24 = ?\n",
+    "print(3*24**(prime-2) % prime)\n",
+    "# 17^(-3) = ?\n",
+    "print(pow(17, prime-4, prime))\n",
+    "# 4^(-4)*11 = ?\n",
+    "print(pow(4, prime-5, prime) * 11 % prime)"
    ]
   },
   {
@@ -272,8 +294,12 @@
    "source": [
     "# Exercise 3.2\n",
     "\n",
-    "k = 19\n",
-    "print(sorted([k*i**29 % 31 for i in range(31)]))"
+    "from random import randint\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
+    "prime = 31\n",
+    "k = randint(1, 31)\n",
+    "print(sorted([i*pow(k,prime-2,prime)%prime for i in range(31)]))"
    ]
   },
   {
@@ -287,7 +313,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -330,21 +356,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-2,4) is not valid\n",
-      "(3,7) is valid\n",
-      "(18,77) is valid\n"
+      "(-2,4) is not on the curve\n",
+      "(3,7) is on the curve\n",
+      "(18,77) is on the curve\n"
      ]
     }
    ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
+    "# (-2,4), (3,7), (18,77)\n",
+    "# equation in python is: y**2 == x**3 + 5*x + 7\n",
+    "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
-    "for point in points:\n",
-    "    if point[1]**2 == point[0]**3 + 5 * point[0] + 7:\n",
-    "        print('({},{}) is valid'.format(point[0], point[1]))\n",
+    "\n",
+    "for x, y in points:\n",
+    "    # determine whether (x,y) is on the curve\n",
+    "    if y**2 == x**3 + 5*x + 7:\n",
+    "        print('({},{}) is on the curve'.format(x,y))\n",
     "    else:\n",
-    "        print('({},{}) is not valid'.format(point[0], point[1]))"
+    "        print('({},{}) is not on the curve'.format(x,y))"
    ]
   },
   {
@@ -394,7 +425,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.017s\n",
       "\n",
       "OK\n"
      ]
@@ -437,12 +468,16 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "x1, y1 = (2,5) \n",
+    "x1, y1 = (2,5)\n",
     "x2, y2 = (-1,-1)\n",
+    "# formula in python:\n",
+    "# s = (y2-y1)/(x2-x1)\n",
+    "s = (y2-y1)/(x2-x1)\n",
+    "# x3 = s**2 - x2 - x1\n",
+    "x3 = s**2 - x2 - x1\n",
+    "# y3 = s*(x1-x3)-y1\n",
+    "y3 = s*(x1-x3) - y1\n",
     "\n",
-    "s=(y2-y1)/(x2-x1)\n",
-    "x3=s**2-x1-x2\n",
-    "y3=s*(x1-x3)-y1\n",
     "print(x3, y3)"
    ]
   },
@@ -457,7 +492,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.008s\n",
       "\n",
       "OK\n"
      ]
@@ -493,18 +528,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.0 -77.0\n"
+      "18.0 77.0\n"
      ]
     }
    ],
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "x1, y1 = (-1,1)\n",
-    "a = 5\n",
-    "s=(3*x1**2+a)/(2*y1)\n",
-    "x3=s**2-2*x1\n",
-    "y3=s*(x1-x3)-y1\n",
+    "a, b = 5, 7\n",
+    "x1, y1 = -1, -1\n",
+    "\n",
+    "# formula in python\n",
+    "# s = (3*x1**2+a)/(2*y1)\n",
+    "s = (3*x1**2+a)/(2*y1)\n",
+    "# x3 = s**2 - 2*x1\n",
+    "x3 = s**2 - 2*x1\n",
+    "# y3 = s*(x1-x3) - y1\n",
+    "y3 = s*(x1-x3) - y1\n",
+    "\n",
     "print(x3, y3)"
    ]
   },
@@ -519,7 +560,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
