--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -44,12 +44,14 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# Initialize points this way:\n",
-    "# x = FieldElement(192, prime)\n",
-    "# y = FieldElement(105, prime)\n",
-    "# p = Point(x, y, a, b)\n",
+    "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
-    "# (192,105), (17,56), (200,119), (1,193), (42,99)"
+    "# iterate over points\n",
+    "    # Initialize points this way:\n",
+    "    # x = FieldElement(192, prime)\n",
+    "    # y = FieldElement(105, prime)\n",
+    "    # try initializing, RuntimeError means not on curve\n",
+    "    # p = Point(x, y, a, b)\n"
    ]
   },
   {
@@ -95,12 +97,13 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# Initialize points this way:\n",
-    "# x = FieldElement(192, prime)\n",
-    "# y = FieldElement(105, prime)\n",
-    "# p1 = Point(x, y, a, b)\n",
+    "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "\n",
-    "# (192,105) + (17,56), (47,71) + (117,141), (143,98) + (76,66)"
+    "# iterate over the additions to be done\n",
+    "    # Initialize points this way:\n",
+    "    # x = FieldElement(192, prime)\n",
+    "    # y = FieldElement(105, prime)\n",
+    "    # p1 = Point(x, y, a, b)"
    ]
   },
   {
@@ -143,17 +146,17 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# Initialize points this way:\n",
-    "# x = FieldElement(192, prime)\n",
-    "# y = FieldElement(105, prime)\n",
-    "# p1 = Point(x, y, a, b)\n",
+    "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
-    "# 2*(192,105), 2*(143,98), 2*(47,71), 4*(47,71), 8*(47,71), 21*(47,71)\n",
-    "\n",
-    "# start product at 0 (point at infinity)\n",
-    "# loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
-    "# add the point to the product\n",
-    "# print product"
+    "# iterate over the multiplications\n",
+    "    # Initialize points this way:\n",
+    "    # x = FieldElement(192, prime)\n",
+    "    # y = FieldElement(105, prime)\n",
+    "    # p = Point(x, y, a, b)\n",
+    "    # start product at 0 (point at infinity)\n",
+    "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
+    "        # add the point to the product\n",
+    "    # print product"
    ]
   },
   {
@@ -190,18 +193,16 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# Initialize points this way:\n",
-    "# x = FieldElement(192, prime)\n",
-    "# y = FieldElement(105, prime)\n",
-    "# p1 = Point(x, y, a, b)\n",
+    "x = FieldElement(15, prime)\n",
+    "y = FieldElement(86, prime)\n",
+    "p = Point(x, y, a, b)\n",
+    "inf = Point(None, None, a, b)\n",
     "\n",
-    "# (15, 86)\n",
-    "\n",
-    "# start product at initial point\n",
+    "# start product at point\n",
     "# start counter at 1\n",
     "# loop until you get point at infinity (0)\n",
-    "# add the point to the product\n",
-    "# add to counter\n",
+    "    # add the point to the product\n",
+    "    # increment counter\n",
     "# print counter"
    ]
   },
@@ -218,6 +219,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confirgming G is on the curve\n",
+    "p = 2**256 - 2**32 - 977\n",
+    "x = 0x79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798\n",
+    "y = 0x483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8\n",
+    "y**2 % p == (x**3 + 7) % p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confirming order of G is n\n",
+    "from ecc import G\n",
+    "\n",
+    "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
+    "print(n*G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting the public point from a secret\n",
+    "from ecc import G\n",
+    "\n",
+    "secret = 999\n",
+    "point = secret*G\n",
+    "print(point)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,7 +266,7 @@
     "\n",
     "#### 5.1. Get the public point where the scalar is the following:\n",
     "```\n",
-    "7, 1485, 2**128, 2**256+2**31\n",
+    "7, 1485, 2**128, 2**240+2**31\n",
     "```\n",
     "\n",
     "#### 5.2. Make [this test](/edit/session2/ecc.py) pass\n",
@@ -244,7 +285,10 @@
     "\n",
     "from ecc import G\n",
     "\n",
-    "# 7, 1485, 2**128, 2**256+2**31"
+    "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
+    "\n",
+    "# iterate over secrets\n",
+    "    # get the public point"
    ]
   },
   {
@@ -283,15 +327,17 @@
    "outputs": [],
    "source": [
     "# Exercise 6.1\n",
+    "from binascii import hexlify\n",
     "\n",
     "from ecc import G\n",
     "\n",
-    "# 999**3, 123, 42424242\n",
+    "secrets = (999**3, 123, 42424242)\n",
     "\n",
-    "# get public point\n",
-    "# uncompressed - b'\\x04' followed by x coord, then y coord\n",
-    "# compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
-    "# here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')"
+    "# iterate through secrets\n",
+    "    # get public point\n",
+    "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
+    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise"
    ]
   },
   {
@@ -332,22 +378,25 @@
    "outputs": [],
    "source": [
     "# Exercise 7.1\n",
-    "\n",
     "from ecc import G\n",
     "\n",
     "from helper import double_sha256, encode_base58, hash160\n",
     "\n",
-    "# compressed, 888**3\n",
-    "# uncompressed, 321\n",
-    "# uncompressed, 4242424242\n",
+    "components = (\n",
+    "    # (compressed, secret)\n",
+    "    (True, 888**3),\n",
+    "    (False, 321),\n",
+    "    (False, 4242424242),\n",
+    ")\n",
     "\n",
-    "# get the public point\n",
-    "# get the sec format\n",
-    "# hash160 the result\n",
-    "# prepend b'\\00' for mainnet b'\\6f' for testnet\n",
-    "# get the double_sha256 of the total, first 4 bytes are the checksum\n",
-    "# append checksum\n",
-    "# encode_base58 the whole thing"
+    "# iterate through components\n",
+    "    # get the public point\n",
+    "    # get the sec format\n",
+    "    # hash160 the result\n",
+    "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "        # get the double_sha256 of the prefix + h160, first 4 bytes are the checksum\n",
+    "        # append checksum\n",
+    "        # encode_base58 the whole thing"
    ]
   },
   {
@@ -380,11 +429,52 @@
    "outputs": [],
    "source": [
     "# Exercise 8.1\n",
-    "\n",
     "from ecc import G\n",
     "\n",
+    "# use your phone number if you can't think of anything\n",
+    "secret = 5555555\n",
+    "\n",
     "# get the public point\n",
-    "# if you completed 7.2, just do the .address() method on the public point"
+    "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Signing Example\n",
+    "from random import randint\n",
+    "\n",
+    "from ecc import G, N\n",
+    "\n",
+    "secret = 4\n",
+    "z = randint(0, 2**256)\n",
+    "k = randint(0, 2**256)\n",
+    "r = (k*G).x.num\n",
+    "s = (z+r*secret) * pow(k, N-2, N) % N\n",
+    "print(hex(z), hex(r), hex(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verification Example\n",
+    "from ecc import G, N, S256Point\n",
+    "\n",
+    "z = 0x524c14a77b666d906fbe56973becf3b3b9eac65442774473c68407e89c5659de\n",
+    "r = 0xc0824a3ccdf3482f1435ef1917fad4a1d5573a15f0fa18a9b81dc76a941c4a3c\n",
+    "s = 0x84ada30118411ef3f1777690d3dc182c289e04486375e91ba73bc48c51c59da7\n",
+    "point = S256Point(\n",
+    "0xe493dbf1c10d80f3581e4904930b1404cc6c13900ee0758474fa94abe8c4cd13, 0x51ed993ea0d455b75642e2098ea51448d967ae33bfbdfe40cfe97bdc47739922)\n",
+    "\n",
+    "u = z * pow(s, N-2, N) % N\n",
+    "v = r * pow(s, N-2, N) % N\n",
+    "(u*G + v*point).x.num == r"
    ]
   },
   {
@@ -423,18 +513,25 @@
     "\n",
     "from ecc import S256Point, G, N\n",
     "\n",
-    "# P = (887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, \n",
-    "#      61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
-    "# z, r, s = 0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60, 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395, 0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
-    "# z, r, s = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d, 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c, 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6    \n",
-    "    \n",
+    "px = 0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c\n",
+    "py = 0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34\n",
+    "\n",
+    "signatures = (\n",
+    "    # (z, r, s)\n",
+    "    (0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60,\n",
+    "     0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395,\n",
+    "     0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4),\n",
+    "    (0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d,\n",
+    "     0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c,\n",
+    "     0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6),\n",
+    ")\n",
+    "\n",
     "# initialize the public point\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
-    "# u = z / s, v = r / s\n",
-    "# calculate 1/s first\n",
-    "# u = z * 1/s % N\n",
-    "# v = r * 1/s % N\n",
-    "# finally, uG+vP should have the x-coordinate equal to r"
+    "\n",
+    "# iterate over signatures\n",
+    "    # u = z / s, v = r / s\n",
+    "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
   },
   {
