--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,57 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "7\n",
-      "25\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.1\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 31\n",
     "# 2+15=?\n",
-    "print((2+15) % prime)\n",
     "# 17+21=?\n",
-    "print((17+21) % prime)\n",
     "# 29-4=?\n",
-    "print((29-4) % prime)\n",
-    "# 15-30=?\n",
-    "print((15-30) % prime)"
+    "# 15-30=?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -126,45 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n",
-      "15\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.1\n",
     "\n",
     "# remember that ** is the exponentiation operator\n",
-    "prime = 31\n",
     "# 24*19=?\n",
-    "print(24*19 % prime)\n",
     "# 17^3=?\n",
-    "print(17**3 % prime)\n",
-    "# 5^5*18=?\n",
-    "print(5**5*18 % prime)"
+    "# 5^5*18=?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300, 325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575, 600, 625, 650, 675, 700, 725, 750]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.2\n",
     "\n",
@@ -172,53 +118,26 @@
     "\n",
     "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1,31)\n",
-    "print(sorted([i*k for i in range(31)]))"
+    "k = randint(1,31)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.3\n",
     "\n",
     "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive\n",
-    "prime = 31\n",
-    "print([i**30 % prime for i in range(1, 31)])"
+    "prime = 31"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.029s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.4\n",
     "\n",
@@ -252,45 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "29\n",
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.1\n",
     "\n",
     "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
-    "print(3*24**(prime-2) % prime)\n",
     "# 17^(-3) = ?\n",
-    "print(pow(17, prime-4, prime))\n",
-    "# 4^(-4)*11 = ?\n",
-    "print(pow(4, prime-5, prime) * 11 % prime)"
+    "# 4^(-4)*11 = ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -298,27 +196,14 @@
     "\n",
     "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1, 31)\n",
-    "print(sorted([i*pow(k,prime-2,prime)%prime for i in range(31)]))"
+    "k = randint(1, 31)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.3\n",
     "\n",
@@ -349,19 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-2,4) is not on the curve\n",
-      "(3,7) is on the curve\n",
-      "(18,77) is on the curve\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -369,29 +244,14 @@
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
     "\n",
     "for x, y in ((-2,4), (3,7), (18,77)):\n",
-    "    if y**2 == x**3 + 5*x + 7:\n",
-    "        print('({},{}) is on the curve'.format(x,y))\n",
-    "    else:\n",
-    "        print('({},{}) is not on the curve'.format(x,y))"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -413,21 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 5.1\n",
     "\n",
@@ -451,17 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0 -7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.1\n",
     "\n",
@@ -469,32 +309,15 @@
     "x2, y2 = (-1,-1)\n",
     "# formula in python:\n",
     "# s = (y2-y1)/(x2-x1)\n",
-    "s = (y2-y1)/(x2-x1)\n",
     "# x3 = s**2 - x2 - x1\n",
-    "x3 = s**2 - x2 - x1\n",
-    "# y3 = s*(x1-x3)-y1\n",
-    "y3 = s*(x1-x3) - y1\n",
-    "\n",
-    "print(x3, y3)"
+    "# y3 = s*(x1-x3)-y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 6.2\n",
     "\n",
@@ -518,17 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0 77.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.1\n",
     "\n",
@@ -537,32 +352,15 @@
     "\n",
     "# formula in python\n",
     "# s = (3*x1**2+a)/(2*y1)\n",
-    "s = (3*x1**2+a)/(2*y1)\n",
     "# x3 = s**2 - 2*x1\n",
-    "x3 = s**2 - 2*x1\n",
-    "# y3 = s*(x1-x3) - y1\n",
-    "y3 = s*(x1-x3) - y1\n",
-    "\n",
-    "print(x3, y3)"
+    "# y3 = s*(x1-x3) - y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 7.2\n",
     "\n",
